# learnopengl

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE
1.0.hello_window/: main.cpp
1.1.hello_triangle/: main.cpp
1.2.shaders/: main.cpp  shaders.vert
1.3.textures/: fragment.frag  main.cpp
1.4.transformations/: main.cpp  transformations.frag  transformations.vert
1.5.coordinate_systems/: coordinate_systems.vert  main.cpp
1.6.camera/: main.cpp
2.0.colors/: main.cpp
2.1.basic_lighting/: colors.frag  main.cpp
2.2.materials/: main.cpp  materials.frag
2.3.lighting_maps/: lighting_maps.frag  main.cpp
2.4.light_casters/: light_casters.frag  main.cpp
2.5.multiple_lights/: light_cube.frag  main.cpp  multiple_lights.frag
3.0.model_loading/: main.cpp
4.0.depth_testing/: depth_testing.frag  main.cpp
4.1.stencil_testing/: main.cpp
4.2.blending/: main.cpp
4.3.face_culling/: main.cpp
common/: camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
